cmake_minimum_required(VERSION 3.8.2)
project(wxserver)
set(CMAKE_CXX_STANDARD 20)
if(WIN32)
include_directories(include thirdparty thirdparty/libczh/include thirdparty/json/single_include "C:/Program Files/OpenSSL-Win64/include")
else()
include_directories(include thirdparty thirdparty/libczh/include thirdparty/json/single_include)
endif()
add_executable(wxserver examples/src/main.cpp)
if(WIN32)
target_link_libraries(wxserver "C:/Program Files/OpenSSL-Win64/lib/libcrypto.lib" "C:/Program Files/OpenSSL-Win64/lib/libssl.lib")
else()
target_link_libraries(wxserver crypto pthread ssl)
endif()
